# SM4_BGV_transciphering

./: BGV_aes.cpp  BGV_aes.h  BGV_aes_byte.cpp  BGV_sm4.cpp  BGV_sm4.h  BGV_sm4_byte.cpp  CMakeLists.txt  README.md  benchmark.cpp
